...
    //Encode button
    encodeButton = [[PictographHighlightButton alloc] init];
    [encodeButton addTarget:self action:@selector(encodeMessage) forControlEvents:UIControlEventTouchUpInside];
    [encodeButton setBackgroundColor:[UIColor whiteColor]];
    [encodeButton setTitleColor:kMainAppColor forState:UIControlStateNormal];
    [encodeButton setTitleColor:kMainAppColorHighlighted forState:UIControlStateHighlighted];
    [encodeButton setTitle:@"Hide Message" forState:UIControlStateNormal];
    [encodeButton setTranslatesAutoresizingMaskIntoConstraints:false];
    
    //Setting the border
    [encodeButton.layer setBorderColor:kMainAppColor.CGColor];
    [encodeButton.layer setBorderWidth:kButtonBorderWidth];
    
...
    if ((![[[PictographDataController sharedController] getUserEncryptionKey] isEqualToString:@""] && [[PictographDataController sharedController] getUserEncryptionEnabled]) || ![[PictographDataController sharedController] getUserEncryptionEnabled]) {
        //If the user has an encr
        currentOption = ImageOptionEncoder;
        [self promptUserForPhotoWithOptionForCamera:YES];
    } else {
        //Show message: encryption is enabled and key is blank
        [self showMessageInAlertController:@"Encryption is enabled but your key is blank, please enter a key." withTitle:@"No Encryption Key"];
    }
}

//Starting the decoding process
- (void)decodeMessage {
    currentOption = ImageOptionDecoder;
...
}

//Shows the decoded message in an alert controller
- (void)showMessageInAlertController:(NSString *)message withTitle:(NSString *)title {
    alertController = [UIAlertController alertControllerWithTitle:title message:message preferredStyle:UIAlertControllerStyleAlert];
    
    UIAlertAction *dismissAction = [UIAlertAction actionWithTitle:@"Dismiss" style:UIAlertActionStyleDefault handler:nil];
    [alertController addAction:dismissAction];
    
    [self presentViewController:alertController animated:YES completion:nil];
}

#pragma mark UIImagePickerControllerDelegate
...
